<resources>
    <string name="app_name">Backlog</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_playing">Playing</string>
    <string name="menu_backlog">Backlog</string>
    <string name="menu_completed">Completed Games</string>

    <string name="placeholder">Placeholder</string>
    <string name="percent">%s %%</string>

    <string name="name">Name: </string>
    <string name="description">Description: </string>
    <string name="platform">Platform: </string>
    <string name="completion">Percentage Completion: </string>

    <string-array name="sort">
        <item>By Name</item>
        <item>By Completion - Descending</item>
        <item>By Completion - Ascending</item>
    </string-array>

    <string-array name="platform">
        <item>PC</item>
        <item>Sega</item>
        <item>Atari</item>
        <item>Arcade</item>
        <item>NES</item>
        <item>SNES</item>
        <item>Gamecube</item>
        <item>Nintendo64</item>
        <item>Wii</item>
        <item>WiiU</item>
        <item>NintendoSwitch</item>
        <item>GameBoy</item>
        <item>NintendoDS</item>
        <item>PlayStation1</item>
        <item>PlayStation2</item>
        <item>PlayStation3</item>
        <item>PlayStation4</item>
        <item>PlayStation5</item>
        <item>PSP</item>
        <item>PlayStationVita</item>
        <item>XBox</item>
        <item>XBox360</item>
        <item>XBoxOne</item>
        <item>XBoxOneX</item>
    </string-array>
</resources>