<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_playing">

    <fragment
        android:id="@+id/nav_playing"
        android:name="com.example.myapplication.controller.playing.PlayingFragment"
        android:label="@string/menu_playing"
        tools:layout="@layout/fragment_playing" />

    <fragment
        android:id="@+id/nav_backlog"
        android:name="com.example.myapplication.controller.backlog.BacklogFragment"
        android:label="@string/menu_backlog"
        tools:layout="@layout/fragment_backlog" />

    <fragment
        android:id="@+id/nav_completed"
        android:name="com.example.myapplication.controller.completed.CompletedFragment"
        android:label="@string/menu_completed"
        tools:layout="@layout/fragment_completed" />

</navigation>